2006-05-26 [colin]	2.2.0cvs59

	* src/procheader.c
		Convert date only if necessary (and don't
		try to convert from utf8 to utf8, too)
	* src/summaryview.c
		Only set column's text if the column's 
		displayed

2006-05-26 [colin]	2.2.0cvs58

	* src/summaryview.c
	* src/gtk/gtkutils.c
		Fix useless warning

2006-05-26 [colin]	2.2.0cvs57

	* src/mainwindow.c
		Make summaryview selectable as long as 
		no message has focus
	* src/mh.c
		Faster deletion (by implementing mh_remove_msgs)
		Faster copy (avoid using mh_fetch_msg just to get
		the filename)
		Faster move (using move_file instead of copy_file
		if MSG_IS_MOVE)
		No progressbar if total number of mails to cp/mv 
		is less than 100
	* src/summaryview.c
		Fix removal from subject_table when mail gets moved
		Faster deletion (g_slist_prepend instead of append)
	* src/gtk/gtksctree.c
		Remove useless code

2006-05-25 [colin]	2.2.0cvs56

	* src/common/ssl_certificate.c
		Fix leak in expired cert check

2006-05-25 [colin]	2.2.0cvs55

	* src/mh.c
		Disable flags syncing on .mh_sequences - it
		is buggy and marks mails read under unknown
		conditions.

2006-05-25 [paul]

	* 2.3.0-rc4 released

2006-05-24 [colin]	2.2.0cvs54

	attention cvs users: if you manage to crash
	Sylpheed-Claws while moving, copying or deleting
	mails, we *are* interested in stack traces and
	valgrind logs. It looks stable, but one never
	knows...

	* src/folder.c
		Add progressbar for cache updates
	* src/folderutils.c
		Optimize Mark all read in the current
		folder
	* src/mh.c
		Add progressbar for copy/move
	* src/procmsg.c
		Optimize O(n^2) in copy/move
	* src/summaryview.c
	* src/gtk/gtksctree.c
		Optimize O(n^2) algos
	* src/common/timing.h
		Display ms instead of us

2006-05-24 [wwp]	2.2.0cvs53

	* manual/fr/advanced.xml
		updates to the French manual.

2006-05-24 [wwp]	2.2.0cvs52

	* src/common/utils.c
		MB translates to a 4-char string in Russian (thanks to Maxim Britov <maxim.britov@gmail.com>).

2006-05-24 [wwp]	2.2.0cvs51
