@@ -1529,3 +1529,4 @@
 ( cvs diff -u -r 1.274.2.116 -r 1.274.2.117 src/mainwindow.c;  cvs diff -u -r 1.79.2.31 -r 1.79.2.32 src/mh.c;  cvs diff -u -r 1.395.2.207 -r 1.395.2.208 src/summaryview.c;  cvs diff -u -r 1.1.4.18 -r 1.1.4.19 src/gtk/gtksctree.c;  ) > 2.2.0cvs57.patchset
 ( cvs diff -u -r 1.395.2.208 -r 1.395.2.209 src/summaryview.c;  cvs diff -u -r 1.5.2.27 -r 1.5.2.28 src/gtk/gtkutils.c;  ) > 2.2.0cvs58.patchset
 ( cvs diff -u -r 1.47.2.29 -r 1.47.2.30 src/procheader.c;  cvs diff -u -r 1.395.2.209 -r 1.395.2.210 src/summaryview.c;  ) > 2.2.0cvs59.patchset
+( cvs diff -u -r 1.26.2.25 -r 1.26.2.26 src/foldersel.c;  ) > 2.2.0cvs60.patchset
